# engineering-thesis

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build.bat  build.sh  build_old.bat  pi_helpers.h  pi_linux_main.cpp  resources.txt
cmake/: config.h.in
cmake/modules/: CompileFlags.cmake  Configure.cmake  FindSDL2.cmake
examples/: CMakeLists.txt
examples/networking/: CMakeLists.txt  example_client.cpp  example_server.cpp
ext/: CMakeLists.txt
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
lib/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
res/: character.aseprite
res/shaders/: entity.fs  extract_bright_fragments.fs  identity.fs  omni.fs  omni.vs  standard.fs  standard.vs
resources/: character.aseprite
resources/shaders/: convolution_1d.fs  entity.vs  omni.vs  postprocessing.vs  shockwave.fs  shockwave.vs
src/: CMakeLists.txt  config.h.in  helpers.h  main.cpp  opengl3_lights.cpp  opengl3_platform.cpp  opengl3_postprocessing.cpp  opengl3_shockwave.cpp  pi_archive.cpp  pi_helpers.h  pi_linux_client_main.cpp  pi_linux_main.cpp  pi_linux_networking.cpp  pi_linux_server_main.cpp  pi_math.h  pi_networking.h  platform.cpp  platform.h  sdl2_platform.cpp  win32_main.cpp
src/base/: base.h  base_common.h  base_log.cpp  base_log.h  base_macros.h  base_memory.cpp  base_memory.h  base_types.cpp  base_types.h
src/client/: CMakeLists.txt  client.h  client_main.cpp  input.cpp  input.h  net_client.cpp  platform.cpp  platform.h  server_control.cpp  server_control.h  title_screen.cpp  title_screen.h  ui_elements.cpp  user_interface.cpp  user_interface.h
src/client/graphics/: opengl3_debug.cpp  opengl3_entity.h  opengl3_lazy_program.h  opengl3_postprocessing.cpp  opengl3_renderer.cpp  opengl3_shockwave.cpp  opengl3_shockwave.h  opengl3_specialised_renderer.cpp  opengl3_texture.cpp  opengl3_texture.h  opengl3_utils.cpp
src/client/old_graphics/: opengl3_debug.h  opengl3_draw_queue.h  opengl3_entity.cpp  opengl3_lights.cpp  opengl3_lights.h  opengl3_postprocessing.cpp  opengl3_postprocessing.h  opengl3_shockwave.cpp  opengl3_texture.cpp
src/client/platform/: input.cpp  input.h  platform.cpp
src/gfx/: opengl3_draw_queue.cpp  opengl3_draw_queue.h  opengl3_entity.cpp  opengl3_entity.h  opengl3_lazy_program.h  opengl3_lights.cpp  opengl3_lights.h  opengl3_platform.cpp  opengl3_postprocessing.cpp  opengl3_postprocessing.h  opengl3_renderer.cpp  opengl3_renderer.h  opengl3_shockwave.cpp  opengl3_shockwave.h  opengl3_specialised_renderer.cpp  opengl3_specialised_renderer.h  opengl3_texture.cpp  opengl3_texture.h  opengl3_utils.cpp  opengl3_utils.h
src/gfx/to_be_deleted/: opengl3_lights.cpp  opengl3_postprocessing.cpp
src/graphics/: opengl3_draw_queue.h  opengl3_entity.cpp  opengl3_lights.cpp  opengl3_renderer.cpp  opengl3_renderer.h  opengl3_specialised_renderer.cpp  opengl3_utils.cpp  opengl3_utils.h
src/old/: pi_archive.cpp  pi_helpers.h  pi_linux_client_main.cpp  pi_networking.cpp  pi_networking.h  resources.txt
src/os/: filesystem.cpp  filesystem.h  os.cpp  os.h
src/os/sdl2/: sdl2_input.cpp  sdl2_platform.cpp  sdl2_platform.h
src/os/win32/: win32_filesystem.cpp  win32_os.cpp
src/platform/: filesystem.h  input.h  platform.h
src/platform/sdl2/: sdl2_input.cpp
src/server/: CMakeLists.txt  net_server.cpp  server.h  server_main.cpp
src/shared/: CMakeLists.txt  address.cpp  address.h  bitpacker.h  data_structures.cpp  data_structures.h  dns.cpp  dns.h  log.cpp  log.h  macros.h  nettemp.h  pi_time.cpp  pi_time.h  rng.cpp  rng.h  serialize.h  sockets.cpp  system.cpp  system.h  utility.cpp  utility.h
src/shared/base/: base.h  base_log.cpp  base_memory.h
src/shared/content/: content.cpp  content.h  particles.cpp  particles.h
src/shared/data_structures/: arena.cpp  arena.h  data_structures.h  ring_buffer.cpp  ring_buffer.h
src/shared/game/: bullet.cpp  bullet.h  content.cpp  content.h  entity.cpp  entity.h  game.cpp  game.h  input.cpp  input.h  level.cpp  level.h  parallax.cpp  parallax.h  world.cpp  world.h
src/shared/game/constans/: constans.cpp  constans.h
src/shared/game/level/: content.cpp  content.h  level.cpp  level.h  plains.cpp  plains.h
src/shared/gl/: buffer.cpp  buffer.h  framebuffer.cpp  framebuffer.h  gl.h  shader.cpp  shader.h  texture.cpp  texture.h  vao.cpp  vao.h
src/shared/graphics/: distortion.cpp  distortion.h  drawqueue.cpp  drawqueue.h  kernel.cpp  kernel.h  light.cpp  light.h  particle.cpp  particle.h  programs.cpp  programs.h  raylib_shaders.cpp  raylib_shaders.h  renderer.cpp  renderer.h
src/shared/math/: geom.cpp  geom.h  rframe.cpp  rframe.h  vector.cpp  vector.h
src/shared/networking/: address.cpp  address.h  dns.cpp  dns.h  networking.h  reliability.cpp  reliability.h  sockets.cpp  sockets.h
src/shared/protocol/: protocol.c  protocol.cpp  protocol.h
src/shared/serialization/: bitpacker.c  bitpacker.cpp  bitpacker.h  bitstream.c  bitstream.cpp  bitstream.h  serialization.h  serialize.c  serialize.cpp  serialize.h  serialize_extra.cpp  serialize_extra.h
src/shared/system/: network.c  network.h  pi_time.c  pi_time.h
